Collapsed revision * Continue setup reader stages * Add, remove and reorder stages. * Load word list from sample texts * Decodable reader setup word list * Fix build Bloom.chm * Decodable reader setup branch * Language setup dialog tab * Setup reader stages

--- a/src/BloomBrowserUI/bookEdit/readerTools/readerTools.css
+++ b/src/BloomBrowserUI/bookEdit/readerTools/readerTools.css
@@ -123,3 +123,13 @@ TD.disabledLimit
 }
 
 .hidden { display: none !important; }
+.align-top { vertical-align: top; }
+
+DIV.wordList { margin: 4px; }
+DIV.word { min-width: 40px; margin: 2px; float: left; }
+DIV.sight-word
+{
+	-moz-text-decoration-style: wavy;
+	-moz-text-decoration-line: underline;
+	-moz-text-decoration-color: green;
+}
